[package]
name = "rush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
common_macros = "0.1.1"
lazy_static = "1.4.0"
rustyline = "11.0.0"
shlex = "1.1.0"
users = "0.11.0"
gethostname = "0.4.1"

[dependencies.unescape]
path="unescape"
